[package]
name = "de_env"
version = "0.1.0"
description = "Deserialize environment variables through serde"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/malobre/de_env"
readme = "README.md"
keywords = ["serde", "env"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[features]
default = ["truthy-falsy"]
truthy-falsy = []

[dependencies]
paste = "1.0.7"
serde = "1.0.137"

[dev-dependencies]
serde = { version = "1.0.137", features = ["derive"] }
