[package]
name = "de_env"
version = "1.0.0"
description = "Deserialize environment variables into a struct"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/malobre/de_env"
readme = "crates-io.md"
keywords = ["serde", "env"]
categories = ["encoding"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "crates-io.md"]

[features]
default = ["truthy-falsy"]
truthy-falsy = []

[dependencies]
paste = "1.0.7"
serde = "1.0.137"

[dev-dependencies]
serde = { version = "1.0.137", features = ["derive"] }
